Added categories table
