# server/common/swagger/Api.yaml
@@ -28,6 +28,15 @@ definitions:
       name:
         type: string
         example: no_stress
+  QuestionBody:
+    type: object
+    title: question
+    required:
+      - name
+    properties:
+      name:
+        type: string
+        example: no_stress
 
 paths:
   /examples:
@@ -82,6 +91,20 @@ paths:
       tags:
         - Questions
       description: Fetch all questions
+      responses:
+        200:
+          description: Returns all questions
+    post:
+      tags:
+        - Questions
+      description: Create a new question
+      parameters:
+        - name: name
+          in: body
+          description: a question
+          required: true
+          schema: 
+            $ref: "#/definitions/QuestionBody"
       responses:
         200:
           description: Returns all questions
